// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`strict_array test_referenced_strict_array_with_non_object_item 1`] = `
{
  "json": {
    "array": [
      0,
      {
        "property": {
          "value": "https://ya.ru",
        },
        "type": "entity_with_complex_property",
      },
    ],
    "link": [
      0,
      {
        "property": {
          "value": "https://ya.ru",
        },
        "type": "entity_with_complex_property",
      },
    ],
    "type": "entity_with_strict_array",
  },
  "templateContext": {
    "link": [
      0,
      {
        "property": {
          "value": "https://ya.ru",
        },
        "type": "entity_with_complex_property",
      },
    ],
  },
}
`;

exports[`strict_array test_referenced_strict_array_with_non_resolvable_item 1`] = `
{
  "json": {
    "array": [
      {
        "type": "entity_with_complex_property",
      },
      {
        "property": {
          "value": "https://ya.ru",
        },
        "type": "entity_with_complex_property",
      },
    ],
    "link": [
      {
        "type": "entity_with_complex_property",
      },
      {
        "property": {
          "value": "https://ya.ru",
        },
        "type": "entity_with_complex_property",
      },
    ],
    "type": "entity_with_strict_array",
  },
  "templateContext": {
    "link": [
      {
        "type": "entity_with_complex_property",
      },
      {
        "property": {
          "value": "https://ya.ru",
        },
        "type": "entity_with_complex_property",
      },
    ],
  },
}
`;

exports[`strict_array test_strict_array_happy_case 1`] = `
{
  "json": {
    "array": [
      {
        "property": {
          "value": "https://ya.ru",
        },
        "type": "entity_with_complex_property",
      },
      {
        "property": {
          "value": "https://ya.ru",
        },
        "type": "entity_with_complex_property",
      },
    ],
    "type": "entity_with_strict_array",
  },
  "templateContext": {},
}
`;

exports[`strict_array test_strict_array_happy_case 2`] = `
[
  [
    [Error: No such template],
  ],
]
`;

exports[`strict_array test_strict_array_happy_case_referenced 1`] = `
{
  "json": {
    "array": [
      {
        "property": {
          "value": "https://ya.ru",
        },
        "type": "entity_with_complex_property",
      },
      {
        "property": {
          "value": "https://ya.ru",
        },
        "type": "entity_with_complex_property",
      },
    ],
    "link": [
      {
        "property": {
          "value": "https://ya.ru",
        },
        "type": "entity_with_complex_property",
      },
      {
        "property": {
          "value": "https://ya.ru",
        },
        "type": "entity_with_complex_property",
      },
    ],
    "type": "entity_with_strict_array",
  },
  "templateContext": {
    "link": [
      {
        "property": {
          "value": "https://ya.ru",
        },
        "type": "entity_with_complex_property",
      },
      {
        "property": {
          "value": "https://ya.ru",
        },
        "type": "entity_with_complex_property",
      },
    ],
  },
}
`;

exports[`strict_array test_strict_array_with_non_object_item 1`] = `
{
  "json": {
    "array": [
      0,
      {
        "property": {
          "value": "https://ya.ru",
        },
        "type": "entity_with_complex_property",
      },
    ],
    "type": "entity_with_strict_array",
  },
  "templateContext": {},
}
`;

exports[`strict_array test_strict_array_with_non_object_item 2`] = `
[
  [
    [Error: No such template],
  ],
]
`;

exports[`strict_array test_strict_array_with_non_object_item_ref 1`] = `
{
  "json": {
    "array": [
      0,
      {
        "link": "https://ya.ru",
        "type": "t_0",
      },
    ],
    "type": "entity_with_strict_array",
  },
  "templateContext": {},
}
`;

exports[`strict_array test_strict_array_with_non_object_item_ref 2`] = `
[
  [
    [Error: No such template],
  ],
]
`;

exports[`strict_array test_strict_array_with_non_resolvable_item 1`] = `
{
  "json": {
    "array": [
      {
        "type": "entity_with_complex_property",
      },
      {
        "property": {
          "value": "https://ya.ru",
        },
        "type": "entity_with_complex_property",
      },
    ],
    "type": "entity_with_strict_array",
  },
  "templateContext": {},
}
`;

exports[`strict_array test_strict_array_with_non_resolvable_item 2`] = `
[
  [
    [Error: No such template],
  ],
]
`;

exports[`strict_array test_strict_array_with_non_resolvable_item_ref 1`] = `
{
  "json": {
    "array": [
      {
        "type": "t_0",
      },
      {
        "link": "https://ya.ru",
        "type": "t_0",
      },
    ],
    "type": "entity_with_strict_array",
  },
  "templateContext": {},
}
`;

exports[`strict_array test_strict_array_with_non_resolvable_item_ref 2`] = `
[
  [
    [Error: No such template],
  ],
]
`;
